[gd_scene load_steps=5 format=2]

[ext_resource path="res://Characters/States/Abilities/Damaging/RockVolley/RockVolley.png" type="Texture" id=1]
[ext_resource path="res://Spells/Scenes/SpellLight.tscn" type="PackedScene" id=2]
[ext_resource path="res://Spells/Scripts/KinematicSpell.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.0
height = 0.0

[node name="KinematicSpell" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 3 )

[node name="SpellLight" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_KinematicSpell_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_KinematicSpell_body_entered"]
[connection signal="tree_entered" from="." to="." method="_on_KinematicSpell_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_KinematicSpell_tree_exiting"]
